<resources>
    <string name="app_name">KTU ice</string>

    <string name="login_login_btn">Log In</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_error_title">Error</string>
    <string name="failed_login">Login failed!</string>
    <string name="login_image_description">A building on KTU premises called "Santakos slėnis"</string>

    <string name="info_student_code">Student code</string>
    <string name="info_student_name">Name</string>
    <string name="info_years_found">Years found</string>
    <string name="logout_text">Log out</string>

    <string name="grade_table_week_header">Week</string>
    <string name="dummy_error_text">Test error</string>
    <string name="grade_table_mark_cell_details">Details</string>
    <string name="module_name">Module name:</string>
    <string name="module_code">Module code:</string>
    <string name="mark_influence">Mark influence:</string>
    <string name="past_versions">Past versions:</string>
    <string name="mark">Mark:</string>
    <string name="no_marks_found">No marks found!</string>
    <string name="marks_button">Marks</string>
    <string name="student_info_button">Student Info</string>
    <string name="daily_agenda_title">Daily agenda</string>
    <string name="time_table">Time Table</string>
    <string name="header_event_summary">Summary:</string>
    <string name="header_event_location">Location:</string>
    <string name="header_event_start">Starts at:</string>
    <string name="loading">Loading..</string>
    <string name="expand_calendar_button_description">Expand calendar button</string>
    <string name="goto_today_btn">Today</string>

    <!--Strings for generating notification content-->
    <string name="notification_new_mark_found">New mark: %s</string>
    <string name="notification_new_marks_found">Multiple new marks!</string>
    <string name="notification_mark_updated">Mark updated!</string>
    <string name="notification_grade_table_changed">Grade table changed!</string>
    <string name="refreshing">Refreshing..</string>
    <string name="refresh_btn">Refresh</string>


    <string name="tab_name_grades">Grades</string>
    <string name="tab_name_timetable">Time Table</string>
    <string name="tab_name_settings">Settings</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_networking_enable">Enable networking</string>
    <string name="settings_mark_update_notifications">Mark Update Notifications</string>
    <string name="settings_card_title">Settings</string>
    <string name="clear_logs">Clear Logs</string>
</resources>
