<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dialog_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/grade_table_mark_cell_details"
        android:textSize="@dimen/grade_table_details_title_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/spacer_view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_title_text" />

    <TableLayout
        android:id="@+id/item_detail_table"
        android:layout_width="368dp"
        android:layout_height="397dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spacer_view">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:text="@string/mark"/>
            <TextView android:text="10" android:id="@+id/mark_text"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:text="@string/past_versions"/>
            <TextView android:text="NE" android:id="@+id/past_marks_text"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:text="@string/module_code"/>
            <TextView android:text="PB505123" android:id="@+id/module_code_text"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView android:text="@string/module_name"/>
            <TextView android:text="Kompiuterinė grafika" android:id="@+id/module_name_text"/>
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/no_grades_found_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/no_marks_found"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spacer_view" />

</android.support.constraint.ConstraintLayout>