<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        app:cardBackgroundColor="?attr/colorCardBackground"
        android:layout_height="wrap_content"
        android:minHeight="256dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <TableRow>
                <TextView
                    android:id="@+id/settings_card_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:text="@string/settings_card_title"/>

            </TableRow>
            <TableRow>
            <TextView
                android:id="@+id/mark_update_notification_switch_label"
                android:text="@string/settings_mark_update_notifications"/>
                <Space android:layout_width="32dp"/>
                <Switch
                    android:id="@+id/notifications_new_grades_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/networking_enable"
                    android:text="@string/settings_networking_enable"/>
                <Space android:layout_width="32dp"/>
                <Switch
                    android:id="@+id/networking_enable_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:id="@+id/current_theme_label"
                    android:text="@string/settings_theme"/>
                <Space android:layout_width="32dp"/>
                <Spinner
                    android:id="@+id/current_theme_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </TableRow>
            <!--<TableRow-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent">-->

                <!--<Button-->
                    <!--android:id="@+id/deleteLogs"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/clear_logs"-->
                    <!--tools:layout_editor_absoluteX="16dp"-->
                    <!--tools:layout_editor_absoluteY="278dp" />-->
            <!--</TableRow>-->
        </TableLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>