<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_content_card"
        card_view:cardBackgroundColor="?attr/colorCardBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:minHeight="100dp"
        app:layout_constraintBottom_toTopOf="@+id/card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <FrameLayout
            android:id="@+id/grade_table_view_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardBackgroundColor="?attr/colorCardBackground"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <TableLayout
            android:id="@+id/bottom_info_drawer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="12dp"
            android:stretchColumns="*">
            <TableRow>
                <TextView android:text="@string/info_student_name" />
                <TextView android:id="@+id/info_student_name" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/info_student_code" />
                <TextView android:id="@+id/info_student_code" />
            </TableRow>
                <Button
                    android:id="@+id/test_button"
                    style="?android:attr/buttonBarButtonStyle"
                    android:text="@string/refresh_btn" />
        </TableLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>